--- a/sass/layouts/_customers.scss
+++ b/sass/layouts/_customers.scss
@@ -1,38 +1,46 @@
 .customers {
   @include media(sm) {
     flex-grow: 1;
-    padding: rem(20);
+    padding: 0 rem(20) rem(36);
     overflow: hidden;
     background-color: $color-background-secondary;
-    background-color: #871a1a;
+    @include media(def) {
+      padding: 0 rem(70) rem(36);
+    }
   }
 
   .customers-inner {
     background-color: $color-background-primary;
-    padding: rem(20);
+    padding: rem(40) rem(30);
     border-radius: rem(15);
   }
 }
 
 .customers-about {
+  margin-bottom: rem(40);
   @include media(ms) {
     display: flex;
     justify-content: space-between;
+    align-items: flex-start;
   }
 
   &__text {
+    @media (max-width: 639px) {
+      margin-bottom: rem(30);
+    }
   }
 
   &__title {
     color: $color-text-tertiary;
     font-size: rem(22);
     font-weight: 600;
+    margin-bottom: rem(7);
 
     @include media(sm) {
       font-size: rem(16);
     }
 
-    @include media(md) {
+    @include media(800px) {
       font-size: rem(22);
     }
   }
@@ -50,6 +58,7 @@
   border-collapse: collapse;
   overflow: auto;
   width: 100%;
+  margin-bottom: rem(30);
   @media (max-width: 945px) {
     display: block;
   }
@@ -57,10 +66,12 @@
   & th {
     color: $color-accessory-dark;
     border-bottom: 1px solid $color-accessory-light;
+    padding: rem(20) rem(5);
   }
 
   & td {
     border-bottom: 1px solid $color-accessory-light;
+    padding: rem(20) rem(5);
 
     & > div {
       background-color: $color-inactive;
@@ -68,6 +79,7 @@
       color: $color-text-inactive;
       border-radius: 4px;
       padding: rem(5) rem(10);
+      max-width: rem(85);
       text-align: center;
     }
 
@@ -89,6 +101,12 @@
   &__text {
     font-size: rem(14);
     font-weight: 500;
+    @media (max-width: 639px) {
+      margin-bottom: rem(30);
+    }
+    @include media(ms) {
+      margin-right: rem(10);
+    }
   }
   &__button-wrapper {
     color: $color-text-primary;
@@ -96,7 +114,8 @@
     font-weight: 500;
     display: flex;
     align-items: center;
-    gap: rem(5);
+    gap: rem(12);
+    justify-content: center;
   }
   &__button {
     width: rem(25);
