--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -2,14 +2,15 @@
   background-color: $color-background-primary;
 }
 .logo {
-  padding: rem(20) rem(10);
+  padding: rem(16);
   display: flex;
   align-items: center;
 
   @include media(sm) {
     min-width: rem(200);
   }
-  @include media(md) {
+  @include media(def) {
+    padding: rem(36);
     min-width: rem(306);
   }
 
@@ -23,16 +24,22 @@
     }
   }
 
+  &__text {
+    display: flex;
+    align-items: baseline;
+  }
+
   &__name {
     color: $color-text-tertiary;
     font-weight: 600;
     font-size: rem(36);
+    margin: 0 rem(4) 0 rem(8);
 
     @include media(sm) {
       font-size: rem(16);
     }
 
-    @include media(md) {
+    @include media(def) {
       font-size: rem(26);
     }
   }
@@ -41,35 +48,29 @@
     color: $color-accessory;
     font-weight: 500;
     font-size: rem(14);
-    margin-bottom: rem(-15);
 
     @include media(sm) {
       font-size: rem(6);
-      margin-bottom: rem(-7.5);
     }
-    @include media(md) {
+    @include media(def) {
       font-size: rem(14);
     }
   }
 }
 .welcome-text-wrapper {
   background-color: $color-background-primary;
-  position: relative;
+  padding: rem(19) 0 0 rem(16);
+
   @include media(sm) {
     flex-grow: 1;
     background-color: $color-background-secondary;
-    background-color: #871a1a;
+  }
+  @include media(def) {
+    padding: rem(36) 0 0 rem(70);
   }
 }
 .welcome-text {
   color: $color-text-tertiary;
   font-size: rem(24);
   font-weight: 500;
-
-  @include media(sm) {
-    position: absolute;
-    top: 50%;
-    left: rem(10);
-    transform: translate(rem(10), -50%);
-  }
 }
